# pytest-redislite

./: .bumpversion.cfg  .git-commits.yaml  Makefile  README.md  pyproject.toml  pytest_redislite.py  requirements.txt  setup.cfg  setup.py  test_plugin.py
.github/workflows/: release.yml  tests.yml
tests/: test_base.py  test_no_autoflash.py
