[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-redislite"
version = "0.2.1"
description = "Pytest plugin for testing code using Redis"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Kirill Klenov", email = "horneds@gmail.com" }]
keywords = ["pytest", "redis", "redislite"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Testing",
  "Framework :: Pytest",
]
dependencies = ["redislite", "pytest"]

[dependency-groups]
dev = ["redis", "types-redis", "pyrefly", "ruff", "pre-commit"]

[project.urls]
Documentation = "https://klen.github.io/pytest-redislite"
"Source code" = "https://github.com/klen/pytest-redislite"
"Issue tracker" = "https://github.com/klen/pytest-redislite/issues"

[project.entry-points."pytest11"]
redislite = "pytest_redislite"

[tool.hatch.version]
path = "pytest_redislite.py"

[tool.pytest.ini_options]
addopts = "-xsv tests"

[tool.pyrefly]
project-includes = ["pytest_redislite.py", "tests.py"]

[tool.ruff]
line-length = 100
target-version = "py310"
include = ["pytest_redislite.py", "tests"]

[tool.bumpversion]
current_version = "0.2.1"
commit = false
tag = false

[[tool.bumpversion.files]]
filename = "pytest_redislite.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
