[wheel]
python-tag = py3

[metadata]
name = pytest-redislite
version = attr: pytest_redislite.__version__
url = https://github.com/klen/pytest-redislite
description = Pytest plugin for testing code using Redis
long_description = file: README.md
long_description_content_type = text/markdown
author = Kirill Klenov
author_email = horneds@gmail.com
license = MIT
license_files = LICENSE
keywords = pytest, redis, redislite
project_urls = 
	Documentation = https://klen.github.io/pytest-redislite
	Source code = https://github.com/klen/pytest-redislite
	Issue tracker = https://github.com/klen/pytest-redislite/issues
classifiers = 
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Software Development :: Testing
	Framework :: Pytest

[options]
py_modules =
    pytest_redislite
python_requires = >= 3.7

[options.extras_require]
tests =
    redis
    types-redis
    pytest-mypy
build = 
    bump2version

[options.entry_points]
pytest11 = 
    redislite = pytest_redislite

[pylama]
ignore = D

[tool:pytest]
addopts = -xsv --mypy

[tox:tox]
envlist = py37,py38,py39

[testenv]
deps = -e .[tests]
commands = 
    pytest test_plugin.py

[mypy]
ignore_missing_imports = True
